@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 21-03-2006 fixed: Starting another last.fm station if crossfading enabled stopped playing (crossfading for last.fm stations disabled now).
+ - 21-03-2006 fixed: Pap's queuing of next file conflicted with last.fm streaming.
+ - 21-03-2006 fixed: FileCurl ignored timeout settings and always used 0.5 seconds.
  - 21-03-2006 fixed: volumebar and seekbar would speed a short while after changing songs
  - 21-03-2006 fixed: trainers for games on dvd.
  - 20-03-2006 added: RemapGlyph() routine to remap common missing characters in XPR fonts (only handles quotes and double quotes at this stage).
